// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stripe-card-element rendering test api key and zip code props 1`] = `
<stripe-card-element class="undefined" publishable-key="pk_test_xxx" zip="false">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should load stripe after setting the publishable-key (snapshot) 1`] = `
<stripe-card-element '="" class="undefined" publishable-key="yyyy" zip="false">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should render with custom button label 1`] = `
<stripe-card-element button-label="Add card" class="undefined" publishable-key="pk_test_xxx">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Add card
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should render with custom sheet title 1`] = `
<stripe-card-element class="undefined" publishable-key="pk_test_xxx" sheet-title="Add your payment information">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should render with intentType setup 1`] = `
<stripe-card-element class="undefined" intent-type="setup" publishable-key="pk_test_xxx">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should render with showLabel enabled 1`] = `
<stripe-card-element class="undefined" publishable-key="pk_test_xxx" show-label="true">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <lenged>
                Card Number
              </lenged>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <lenged>
                MM / YY
              </lenged>
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <lenged>
                CVC
              </lenged>
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <lenged>
                Postal Code
              </lenged>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test should render with stripe account 1`] = `
<stripe-card-element class="undefined" publishable-key="pk_test_xxx" stripe-account="acct_xxx">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;

exports[`stripe-card-element rendering test with the api key 1`] = `
<stripe-card-element class="undefined" publishable-key="pk_test_xxx">
  <div class="stripe-payment-sheet-wrap">
    <form id="stripe-card-element">
      <div class="stripe-heading">
        Add your payment information
      </div>
      <div id="stripe-payment-request-button"></div>
      <div>
        <div class="stripe-section-title">
          Card information
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <div id="card-number"></div>
            </label>
          </div>
          <div class="stripe-input-column" style="display: flex;">
            <label style="width: 50%;">
              <div id="card-expiry"></div>
            </label>
            <label style="width: 50%;">
              <div id="card-cvc"></div>
            </label>
          </div>
        </fieldset>
      </div>
      <div class="stripe-element-errors" id="card-errors"></div>
      <div style="margin-top: 1.5rem;">
        <div class="stripe-section-title">
          Country or region
        </div>
      </div>
      <div class="card payment-info visible">
        <fieldset class="stripe-input-box">
          <div>
            <label>
              <input class="StripeElement stripe-input-box" id="zip" inputmode="numeric" name="zip" placeholder="Postal Code" type="text" value="" style="width: 100%;">
            </label>
          </div>
        </fieldset>
      </div>
      <div style="margin-top: 32px;">
        <button type="submit">
          Pay
        </button>
      </div>
    </form>
  </div>
</stripe-card-element>
`;
